# EOS

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: CmakeMacros.cmake  FetchMacros.cmake  deps-lock.cmake  deps.cmake
data/rubber_duck/: scene.gltf
dependencies/binaries/slang/: README.md
dependencies/binaries/slang/cmake/: slangConfig.cmake  slangConfigVersion.cmake  slangTargets-release.cmake  slangTargets.cmake
dependencies/binaries/slang/include/: slang-com-helper.h  slang-cpp-scalar-intrinsics.h  slang-cuda-prelude.h  slang-deprecated.h  slang-include.h  slang-tag-version.h  slang.h
dependencies/binaries/slang/lib/: gfx.lib  libgfx.so.0.2026.1.1  libgfx.so.0.2026.2.1  libgfx.so.dwarf  libslang-glsl-module.so.dwarf  libslang-rt.so.0.2026.1.1  libslang-rt.so.0.2026.2.1  libslang-rt.so.dwarf  libslang.so.dwarf  slang-compiler.lib  slang-rt.lib  slang.lib
dependencies/binaries/slang/lib/cmake/slang/: slangConfigVersion.cmake  slangTargets-release.cmake
examples/: CMakeLists.txt  common.h
examples/CascadedShadowMapping/: CMakeLists.txt
examples/CascadedShadowMapping/src/: main.cpp
examples/CascadedShadowMapping/src/shaders/: cascadeSetup.slang  depthReduction.slang  earlyZ.slang  shade.slang  shadowCommon.slang  shadowDepth.slang
examples/Common/: App.h  Camera.h  ExampleHelpers.h  ModelLoader.h
examples/ComputeShader/: CMakeLists.txt
examples/ComputeShader/src/: main.cpp
examples/ComputeShader/src/shaders/: compute.slang
examples/DepthOfField/: CMakeLists.txt
examples/DepthOfField/src/: main.cpp
examples/DepthOfField/src/shaders/: deferredLightCompute.slang  dofBlurH.slang  dofBlurV.slang  dofCommon.slang  dofComposite.slang  dofDownsample.slang  indirectModel.slang  present.slang
examples/DepthOfField/src/shaders /: dofBlurH.slang  indirectModel.slang  present.slang
examples/EdgeDetetction/: CMakeLists.txt
examples/EdgeDetetction/src/: main.cpp
examples/EdgeDetetction/src/shaders/: deferredLight.slang  edgeDetect.slang
examples/ModelPBR/: CMakeLists.txt
examples/ModelPBR/src/: main.cpp
examples/ModelPBR/src/shaders/: modelAlbedo.slang  pbr.slang
examples/MultiDrawIndirect/: CMakeLists.txt
examples/MultiDrawIndirect/src/: main.cpp
examples/MultiDrawIndirect/src/shaders/: indirectModel.slang  modelAlbedo.slang  pbr.slang
examples/ShadowMapping/: CMakeLists.txt
examples/ShadowMapping/src/: main.cpp
examples/ShadowMapping/src/shaders/: modelAlbedo.slang  pbr.slang  shade.slang  shadowCommon.slang  shadowDepth.slang
examples/Triangle/: CMakeLists.txt
examples/Triangle/src/: main.cpp
examples/Triangle/src/shaders/: triangle.slang
src/: EOS.cpp  EOS.h  Handle.cpp  ImGuiRenderer.cpp  ImGuiRenderer.h  defines.h  enums.h  handle.cpp  handle.h  logger.cpp  logger.h  main.cpp  pool.cpp  pool.h  textureCompression.cpp  textureCompression.h  texturePipeline.cpp  texturePipeline.h  utils.cpp  utils.h  window.cpp  window.h
src/shaders/: bindings.slang  common.slang  debugDraw.slang  fullscreen.slang  imgui.slang  math.slang  modelAlbedo.slang  pbrShared.slang  shaderCompiler.cpp  shaderCompiler.h  shaderReloader.cpp  shaderReloader.h  shaderUtils.cpp  shaderUtils.h  shading.slang  triangleFrag.slang  triangleVert.slang
src/vulkan/: vkTools.cpp  vkTools.h  vulkanClasses.cpp  vulkanClasses.h
tools/: CMakeLists.txt  shader_compiler_tool.cpp  texture_packer.cpp  texture_packer.h
tools/ShaderTools/: shaderCompiler.cpp  shaderCompiler.h  shaderReloader.cpp  shaderReloader.h  shader_compiler_tool.cpp
tools/TextureTools/: texture_packer.h
